# pal_robotics_payload_metrics

./: README.md  pinocchio_results.txt
src/: Cover letter and Project ideas proposal,pdf  Talker_listener.webm  talker_listener.webm
src/pinocchio_demo_cpp/: CMakeLists.txt  README.md  package.xml
src/pinocchio_demo_cpp/src/: pinocchio_demo_node.cpp
src/pmb2_robot/pmb2_bringup/: CHANGELOG.rst  package.xml
src/pmb2_robot/pmb2_controller_configuration/: CHANGELOG.rst  package.xml
src/pmb2_robot/pmb2_description/: CHANGELOG.rst  package.xml
src/pmb2_robot/pmb2_robot/: CHANGELOG.rst  package.xml
src/tiago_pinocchio_demo/: package.xml  setup.cfg  setup.py
src/tiago_pinocchio_demo/tiago_pinocchio_demo/: README.md  pinocchio_node.py
src/tiago_robot/tiago_bringup/: CHANGELOG.rst  package.xml
src/tiago_robot/tiago_controller_configuration/: CHANGELOG.rst  package.xml
src/tiago_robot/tiago_description/: CHANGELOG.rst  package.xml
src/tiago_robot/tiago_robot/: CHANGELOG.rst  package.xml
