<package format="3">
  <name>pinocchio_demo_cpp</name>
  <version>0.0.1</version>
  <description>Pinocchio demo in C++ that performs forward kinematics, Jacobians, and distance checks.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Pinocchio as a build dependency -->
  <build_depend>pinocchio</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- Pinocchio as an exec dependency too -->
  <exec_depend>pinocchio</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
