<package format="3">
  <name>tiago_pinocchio_demo</name>
  <version>0.0.1</version>
  <description>Example node that uses Pinocchio for forward kinematics.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pinocchio</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
